[package]
name = "thulac-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
ctor = "0.1.21"
ndarray = "0.15.4"
phf = { version = "0.10.1", features = ["macros"] }
